backButton z-index fix

--- a/src/container/app.scss
+++ b/src/container/app.scss
@@ -347,6 +347,10 @@ body {
         margin: 20px 0;
       }
 
+      .backToBooksButton {
+        z-index: 99;
+      }
+
       .specificBookBody {
         display: flex;
         flex-direction: row;
